--- a/src/hotelcasestudy/ADMIN_Dashboard.form
+++ b/src/hotelcasestudy/ADMIN_Dashboard.form
@@ -155,14 +155,16 @@
                       <Component id="jLabel6" min="-2" pref="661" max="-2" attributes="0"/>
                       <EmptySpace pref="683" max="32767" attributes="0"/>
                   </Group>
-                  <Group type="102" alignment="0" attributes="0">
+                  <Group type="102" attributes="0">
                       <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
                       <Component id="jLabel9" min="-2" pref="60" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jLabel10" min="-2" pref="248" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
+                      <Component id="return_btn911" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
                       <Component id="logout_btn" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+                      <EmptySpace min="18" pref="18" max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -177,6 +179,7 @@
                                   <Component id="jLabel9" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="logout_btn" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="jLabel10" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
+                                  <Component id="return_btn911" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -232,6 +235,26 @@
                 <Property name="text" type="java.lang.String" value="jLabel2"/>
               </Properties>
             </Component>
+            <Component class="javax.swing.JButton" name="return_btn911">
+              <Properties>
+                <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="4b" green="64" red="8c" type="rgb"/>
+                </Property>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Liberation Sans" size="12" style="0"/>
+                </Property>
+                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Return to Dashboard"/>
+                <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+                  <Border info="null"/>
+                </Property>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="return_btn911ActionPerformed"/>
+              </Events>
+            </Component>
           </SubComponents>
         </Container>
         <Component class="javax.swing.JLabel" name="jLabel1">
@@ -258,6 +281,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Room Type Management"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="room_type_managementActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="maint_sched">
           <Properties>
@@ -272,6 +298,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Maintenance Scheduling"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="maint_schedActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="room_management">
           <Properties>
@@ -286,6 +315,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Room Management"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="room_managementActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="resv_management">
           <Properties>
@@ -300,6 +332,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Reservation Management"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="resv_managementActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="user_management">
           <Properties>
@@ -314,6 +349,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="User Management"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="user_managementActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="employee_management">
           <Properties>
@@ -328,6 +366,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Employee Management"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="employee_managementActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="report_btn">
           <Properties>
